--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "homework-7-part-1",
+  "name": "homework-13-part-1",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,12 +17,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tnguyen303/homework-7-part-1.git"
+    "url": "git+https://github.com/tnguyen303/homework-13-part-1.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tnguyen303/homework-7-part-1/issues"
+    "url": "https://github.com/tnguyen303/homework-13-part-1/issues"
   },
-  "homepage": "https://github.com/tnguyen303/homework-7-part-1#readme"
+  "homepage": "https://github.com/tnguyen303/homework-13-part-1#readme"
 }
